          Bug #240: Intel 13 generates incorrect code in rare cases
	            involving compile-time constants larger than
	            0x7fffffff
	  Bug  #59: cdi_eospac design flaw
	  Feature #227: refactor cdi_analytic opacities
	  Feature #135: Build on WIN32

	* Statistics (see draco/regression/metrics_report.sh)

Contributers (updated Release.cc with this ordering).
------------



Lines of code
-------------

* Note: previously, the metrics_report.sh script did not report the values
        for text files correctly.  This change accounts for the extra 20k
	LOC compared to draco-6_7_0.

--------------------------------------------------------------------------------
Language                      files          blank        comment           code
--------------------------------------------------------------------------------
C++                             401          11284          18021          63388
C/C++ Header                    340           7548          21235          19993
Text                             81           2323           1947          19876
Lisp                             13           1810           2543          11960
Perl                              2           1351           1562           8775
CMake                           106           1827           4903           6882
Visual Basic                     13            202              0           5482
Python                           26           1210           1343           2197
Bourne Shell                     11            193            452            837
C                                 6            220            430            694
Bourne Again Shell                4             99            206            564
CSS                               1            113             37            395
C Shell                           3             42            103            244
Fortran 90                        3             38             68            118