@@ -10,11 +10,11 @@
 \par Authors
 <a href="mailto:kgt@lanl.gov">Kelly (KT) Thompson</a>,
 <a href="mailto:kgb@lanl.gov">Kent Budge</a>,
-<a href="mailto:lowrie@lanl.gov">Robert Lowrie</a>
+<a href="mailto:lowrie@lanl.gov">Robert Lowrie</a>,
 <a href="mailto:warsa@lanl.gov">Jim Warsa</a>,
 <a href="mailto:gaber@lanl.gov">Gabe Rockefeller</a>,
 <a href="mailto:wollaber@lanl.gov">Allan Wollaber</a>,
-<a href="mailto:jhchang@lanl.gov">Jae Chang</a>,
+<a href="mailto:jhchang@lanl.gov">Jae Chang</a>
 
 \par Executive Summary
 Draco is a C++ radiation transport component library developed by CCS-2, Los
@@ -54,7 +54,7 @@ the namespace reference rtt_<pkg> -->
 - \ref overview_diagnostics
 - \ref overview_dsxx
 - \ref rtt_fit
-- \ref overview_fpe_trap
+- \ref overview_memory
 - \ref overview_lapack_wrap
 - \ref rtt_linear
 - \ref overview_meshreaders
