@@ -178,8 +178,18 @@
 
 Contributers (updated Release.cc with this ordering).
 ------------
-
-
+72027: kellyt
+46166: kgbudge
+11568: tme
+6133: bta
+5536: lowrie
+4590: gaber
+4456: mwbuksas
+4043: mcghee
+2079: warsa
+1213: rsqrd
+914: sethrj
+898: wollaber
 
 Lines of code
 -------------
